tests/ui/spirv-attr/bad-deduce-storage-class.stderr
error: storage class mismatch
 --> $DIR/bad-deduce-storage-class.rs:8:5
  |
8 |     #[spirv(uniform)] error: &Image!(2D, type=f32),
  |     ^^^^^^^^-------^^^^^^^^^^---------------------
  |             |                |
  |             |                `UniformConstant` deduced from type
  |             `Uniform` specified in attribute
  |
help: remove storage class attribute to use `UniformConstant` as storage class
 --> $DIR/bad-deduce-storage-class.rs:8:13
  |
8 |     #[spirv(uniform)] error: &Image!(2D, type=f32),
  |             ^^^^^^^

error: entry parameter type must be by-reference: `&spirv_std::image::Image<f32, 1, 2, 0, 0, 0, 0, 4>`
  --> $DIR/bad-deduce-storage-class.rs:14:27
   |
14 | pub fn issue_585(invalid: Image!(2D, type=f32)) {}
   |                           ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `Image` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

